<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logbckg"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp"
                android:background="@drawable/custome_et">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/marian_blue" />

                <!-- Full Name -->
                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/custome_et"
                    android:padding="8dp"
                    android:hint="@string/full_name"
                    android:drawableStart="@drawable/ic_person"
                    android:textColor="@color/black"
                    android:drawablePadding="8dp" />

                <!-- Username -->
                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custome_et"
                    android:padding="8dp"
                    android:hint="@string/username"
                    android:drawableStart="@drawable/ic_person"
                    android:textColor="@color/black"
                    android:drawablePadding="8dp" />

                <!-- Email -->
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custome_et"
                    android:padding="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_email"
                    android:textColor="@color/black"
                    android:drawablePadding="8dp" />

                <!-- Password -->
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custome_et"
                    android:padding="8dp"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableEnd="@drawable/ic_visibilty_off"
                    android:textColor="@color/black"
                    android:drawablePadding="8dp" />

                <!-- Confirm Password -->
                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custome_et"
                    android:padding="8dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableEnd="@drawable/ic_visibilty_off"
                    android:textColor="@color/black"
                    android:drawablePadding="8dp" />

                <!-- Register Text -->
                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tvLogin"
                    android:textColor="@color/marian_blue"
                    android:textSize="14sp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true" />

                <!-- Login Button -->
                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/register"
                    android:textSize="18sp"
                    android:backgroundTint="#41529b"
                    app:cornerRadius="20dp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>